--- a/PetMate/src/components/JanelaModal.css
+++ b/PetMate/src/components/JanelaModal.css
@@ -6,28 +6,42 @@
     min-height: 55vh;
     background-color: #FFFFFF;
     border-radius: 10px;
-    width: 55vw;
+    width: 65vw;
     /* max-width: 600px; */
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
-    border: 1px solid #3d2b1e;
+    /* border: 1px solid #3d2b1e; */
+    border-left: 25px solid #654833;
     justify-content: center;
     margin-top: 20px;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
+}
+
+.titulo-barra-pet img{
+    width: 350px;
+}
+
+.conteiner_modal label,
+.conteiner_modal input,
+.conteiner_modal select {
+    font-family: 'Nunito', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: #3d2b1e;
 }
 
 .conteiner_modal input,
-.conteiner_modal textarea,
 .conteiner_modal select {
-    /* width: 100%; */
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    font-size: 16px;
+    text-align: center;
+    height: 50px;
+    width: 400px;
+    border-radius: 8px;
+    padding: 5px;
+    background-color: #EBE5E0;
+    outline: none;
+    border: 1px solid #3d2b1e;
+    margin-bottom: 10px;
 }
-
 
 .conteiner_modal input:focus,
 .conteiner_modal textarea:focus,
@@ -123,7 +137,7 @@
     gap: 150px;
 }
 
-.inputs-pet input,
+/* .inputs-pet input,
 .linha-inpt select {
     height: 45px;
     width: 300px;
@@ -134,7 +148,7 @@
     outline: none;
     padding: 5px;
     font-size: 18px;
-}
+} */
 
 .inptImgPet {
     border: #84644D 1px solid;
@@ -146,6 +160,9 @@
     height: 50px;
     width: 360px;
     text-align: center;
+}
+.labelImg{
+    margin-top: 20px;
 }
 
 .radio-pet {
@@ -188,7 +205,7 @@
     color: #D9D9D9;
 }
 #selectGenero{
-    width: 300px;
+    width: 400px;
     height: 45px;
 }
 .genero-pet {
@@ -257,7 +274,7 @@
     gap: 150px;
 }
 
-.termos-cadastro-pet {
+/* .termos-cadastro-pet {
     display: flex;
     flex-direction: row;
     width: 95%;
@@ -268,11 +285,10 @@
 
 .termos-cadastro-pet p {
     font-size: 18px;
-    /* border: solid; */
 }
 
 .termos-pet {
-    font-family: roboto;
+    font-family: 'Nunito', sans-serif;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -289,4 +305,4 @@
 .termos-pet input {
     transform: scale(1.3);
     margin-right: 15px;
-}
+} */
