--- a/PetMate/src/pages/Cadastro.css
+++ b/PetMate/src/pages/Cadastro.css
@@ -317,7 +317,7 @@
 }
 
 .erro-mensagem {
-    color: rgb(219, 16, 16);;
+    color: rgb(219, 16, 16);
     text-align: center;
     font-size: 20px;
     margin-right: 40px;
