--- a/PetMate/src/components/BarraFiltro.css
+++ b/PetMate/src/components/BarraFiltro.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: row;
     min-width: 100vw;
-    background-color: #AD947E;
+    background-color: #E8E3DE;
     height: 15vh;
     align-items: center;
     justify-content: center;
     gap: 40px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
     padding: 10px;
     /* border-radius: 10px; */
 }
@@ -20,42 +20,42 @@
 }
 
 .filtro-container label {
-    color: white;
+    color: #484848;
     font-size: 20px;
     font-family: Raleway;
     font-weight: 500;
 }
 
 .filtro-container select {
-    background-color: #AD947E;
-    /* border: 2px solid #84644D; */
-    border: none;
+    background-color: #ad947e00;
+    border: 1px solid #84644D;
+    /* border: none; */
     height: 40px;
     padding: 5px 10px;
     border-radius: 8px;
     font-size: 20px;
     font-family: Nunito;
-    color: white;
+    color: #484848;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     outline: none;
 }
 
 .filtro-container select:hover {
-    background-color: #9C7A5E;
-    border-color: #6B4A2E;
+    /* background-color: #9C7A5E; */
+    /* border-color: #6B4A2E; */
     outline: none;
 
 }
 
 .filtro-container select:focus {
-    background-color: #9C7A5E;
+    background-color: #E8E3DE;
     border-color: #6B4A2E;
     outline: none;
 }
 
 .botao-limpar{
-    background-color: #AD947E;
+    background-color: #9C7A5E;
     color: white;
     font-size: 20px;
     padding: 0 10px;
@@ -64,9 +64,9 @@
     font-family: nunito;
     border: none;
     border-radius: 8px;
-    transition: all 0.3s ease;
+    transition: 0.5s ease;
 }
 .botao-limpar:hover{
-    background-color: #9C7A5E;
+    background-color: #7c634e;
 }
 
