--- a/PetMate/src/components/BarraPesquisa.css
+++ b/PetMate/src/components/BarraPesquisa.css
@@ -1,7 +1,9 @@
 .pesquisa-container{
-    position: relative;
+    position: absolute;
     display: inline-block;
+    right: 60%;
 }
+
 .barraDePesquisa{
     height: 40px;
     width: 400px;
@@ -18,6 +20,7 @@
 .barraDePesquisa:focus {
     outline: none;
 }
+
 .iconeLupa{
     position: absolute;
     height: 20px;
