--- a/PetMate/src/components/BarraFiltro.css
+++ b/PetMate/src/components/BarraFiltro.css
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: row;
     min-width: 100vw;
-    background-color: #E8E3DE;
+    /* background-color: #E8E3DE; */
+    background-color: #EBE5E0;
     height: 15vh;
     align-items: center;
     justify-content: center;
     gap: 40px;
-    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
     padding: 10px;
-    /* border-radius: 10px; */
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 .select-filter {
