--- a/PetMate/src/components/ModalEditarPet.css
+++ b/PetMate/src/components/ModalEditarPet.css
@@ -107,7 +107,8 @@
     border-radius: 8px;
     padding: 5px;
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
     margin-bottom: 10px;
     background-color: #EBE5E0;
     outline: none;
@@ -134,6 +135,7 @@
     font-size: 16px;
     text-align: center;
     font-family: 'Nunito', sans-serif;
+    font-weight: bold;
     margin-bottom: 10px;
     text-wrap: wrap;
     background-color: #EBE5E0;
@@ -157,6 +159,7 @@
     font-size: 18px;
     text-align: center;
     font-family: 'Nunito', sans-serif;
+    font-weight: bold;
     margin-bottom: 10px;
     background-color: #EBE5E0;
     outline: none;
