--- a/PetMate/src/components/ModalEditarPet.css
+++ b/PetMate/src/components/ModalEditarPet.css
@@ -144,15 +144,36 @@
 
 }
 
-.edit-imagem{
+.edit-imagem {
     display: flex;
     flex-direction: column;
+    width: 900px;
     align-items: center;
     gap: 5px;
 }
-
-.edit-imagem input{
-    width: 940px;
+.add-img-pet{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    border: 1px solid #3d2b1e;
+    border-radius: 4px;
+    padding: 5px 10px;
+    white-space: nowrap;
+    cursor: pointer;
+    height: 40px;
+    width: 150px;
+    font-family: 'Nunito';
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    background-color: #EBE5E0;
+    color: #3d2b1e;
+    transition: 0.3s;
+}
+/* .edit-imagem input {
+    display: flex;
+    flex-direction: column;
     height: 50px;
     border-radius: 8px;
     padding: 5px;
@@ -164,8 +185,24 @@
     background-color: #EBE5E0;
     outline: none;
     border: 1px solid #3d2b1e;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border: solid;
 
 }
+
+
+.edit-imagem button{
+    border: none;
+}
+
+.edit-imagem input:hover {
+    background-color: #D6CCC2;
+}
+
+.edit-imagem input:focus {
+    border-color: #5A3E2B;
+} */
 .tags-container-edit{
     text-align: center;
 }
