--- a/PetMate/src/components/JanelaModal.css
+++ b/PetMate/src/components/JanelaModal.css
@@ -14,7 +14,7 @@
     border-left: 25px solid #654833;
     justify-content: center;
     margin-top: 20px;
-    padding-bottom: 60px;
+    padding-bottom: 40px;
 }
 
 .titulo-barra-pet img{
@@ -104,27 +104,27 @@
     height: 10px;
 }
 
-.add-img {
+.add-img{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    /* cursor: pointer; */
-    color: #A3A3A3;
-    /* box-shadow: 1px 1px 2px #545454; */
-    border: solid #84644D 2px;
-    height: 15vh;
-    width: 17vw;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: #F5F5F5;
-    margin-bottom: 30px;
+    gap: 10px;
 }
-
-.preview-image {
-    width: 120px;
-    object-fit: cover;
-    border-radius: 5px;
+.img-preview{
+    border: solid 3px #84644D;
+    border-radius: 4px;
+    display: flex;
+}
+.img-preview img{
+    height: 120px;
+    width: fit-content;
+}
+.label-inpt-img{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 20px;
+    gap: 20px;
 }
 
 .iconImg {
@@ -136,34 +136,28 @@
     flex-direction: row;
     gap: 150px;
 }
-
-/* .inputs-pet input,
-.linha-inpt select {
-    height: 45px;
-    width: 300px;
-    margin-bottom: 30px;
-    border: #84644D 1px solid;
-    border-radius: 10px;
-    background-color: #EBE5E0;
-    outline: none;
-    padding: 5px;
-    font-size: 18px;
-} */
-
-.inptImgPet {
-    border: #84644D 1px solid;
-    border-radius: 10px;
-    background-color: #EBE5E0;
-    outline: none;
-    padding: 5px;
+.botao-add-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    border: 1px solid #3d2b1e;
+    border-radius: 4px;
+    padding: 5px 10px;
+    white-space: nowrap;
+    cursor: pointer;
+    height: 40px;
+    width: 150px;
+    font-family: 'Nunito';
     font-size: 16px;
-    height: 50px;
-    width: 360px;
-    text-align: center;
+    font-weight: bold;
+    margin-bottom: 10px;
+    background-color: #EBE5E0;
+    color: #3d2b1e;
+    transition: 0.3s;
 }
-.labelImg{
-    margin-top: 20px;
-}
+
+
 
 .radio-pet {
     display: flex;
@@ -239,7 +233,7 @@
     font-family: "Raleway", sans-serif;
     font-weight: bold;
     margin-top: 5px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
@@ -265,35 +259,5 @@
     gap: 150px;
 }
 
-/* .termos-cadastro-pet {
-    display: flex;
-    flex-direction: row;
-    width: 95%;
-    justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
 
-.termos-cadastro-pet p {
-    font-size: 18px;
-}
 
-.termos-pet {
-    font-family: 'Nunito', sans-serif;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.link-termos {
-    font-size: 18px;
-    text-decoration: none;
-    color: #84644D;
-    width: 200px;
-    margin-left: 5px;
-}
-
-.termos-pet input {
-    transform: scale(1.3);
-    margin-right: 15px;
-} */
