--- a/PetMate/src/components/ModalEditarPet.css
+++ b/PetMate/src/components/ModalEditarPet.css
@@ -144,12 +144,16 @@
 
 }
 
-.edit-imagem {
+.edit-imagem-pet {
     display: flex;
-    flex-direction: column;
-    width: 900px;
     align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 200px;
+    margin: auto;
     gap: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .add-img-pet{
     display: flex;
@@ -166,43 +170,12 @@
     font-family: 'Nunito';
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     background-color: #EBE5E0;
     color: #3d2b1e;
     transition: 0.3s;
 }
-/* .edit-imagem input {
-    display: flex;
-    flex-direction: column;
-    height: 50px;
-    border-radius: 8px;
-    padding: 5px;
-    font-size: 18px;
-    text-align: center;
-    font-family: 'Nunito', sans-serif;
-    font-weight: bold;
-    margin-bottom: 10px;
-    background-color: #EBE5E0;
-    outline: none;
-    border: 1px solid #3d2b1e;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    border: solid;
 
-}
-
-
-.edit-imagem button{
-    border: none;
-}
-
-.edit-imagem input:hover {
-    background-color: #D6CCC2;
-}
-
-.edit-imagem input:focus {
-    border-color: #5A3E2B;
-} */
 .tags-container-edit{
     text-align: center;
 }
