--- a/PetMate/src/components/CardContainer.css
+++ b/PetMate/src/components/CardContainer.css
@@ -1,66 +1,96 @@
 .pets-container {
-    padding: 50px;
-    text-align: center;
-  }
-  
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 80px;
-    justify-content: center;
-  }
-  
-  .pet-card {
-    width: 350px;
-    height: 475px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    transition: transform 0.2s;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-  
-  .pet-card:hover {
-    transform: scale(1.02);
-  }
-  
-  .pet-image {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-  }
-  
-  .pet-info-card {
-    padding: 15px;
-    text-align: center;
-  }
-  
-  .pet-info-card h3 {
-    font-size: 20px;
-    margin-bottom: 5px;
-    color: #333;
-  }
-  
-  .pet-info-card p {
-    font-size: 18px;
-    margin: 5px 0;
-    color: black;
-  }
-  
-  .botao-info-pet{
-    cursor: pointer;
-    height: 45px;
-    width: 180px;
-    text-align: center;
-    background-color: #84644d;
-    border: none;
-    border-radius: 8px;
-    color: #F5F5F5;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: nunito;
-    letter-spacing: 0.01em;
-    margin-top: -5px;
-  }
+  padding: 50px;
+  text-align: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 80px;
+  justify-content: center;
+}
+
+.pet-card {
+  width: 350px;
+  height: 475px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  transition: transform 0.2s;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.pet-card:hover {
+  transform: scale(1.02);
+}
+
+.pet-image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.pet-info-card {
+  padding: 15px;
+  text-align: center;
+}
+
+.pet-info-card h3 {
+  font-size: 20px;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.pet-info-card p {
+  font-size: 18px;
+  margin: 5px 0;
+  color: black;
+}
+
+.botoes-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.botao-info-pet {
+  cursor: pointer;
+  height: 45px;
+  width: 180px;
+  text-align: center;
+  background-color: #9C7A5E;
+  border: none;
+  border-radius: 8px;
+  color: #F5F5F5;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: nunito;
+  letter-spacing: 0.01em;
+  margin-left: 45px;
+}
+
+.favorito-icon {
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  border: none;
+  background-color: #cccccc00;
+  transition: transform 0.3s ease;
+}
+
+.favorito-icon:hover {
+  transform: scale(1.2);
+}
+.p-favoritos{
+  font-size: 20px;
+}
+
+.estrela-preenchida, .estrela-vazia{
+  font-size: 34px;
+  color: #e8c41c;
+
+}
+
