--- a/PetMate/src/components/CadastroONG.css
+++ b/PetMate/src/components/CadastroONG.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     background-color: whitesmoke;
     box-shadow: 0 0 10px rgba(10, 10, 10, 0.2);
-    width: 62%;
+    width: 63%;
 
 }
 
@@ -20,7 +20,7 @@
     /* border: solid; */
     align-items: center;
     margin-top: 2%;
-    margin-left: 4%;
+    margin-left: 2%;
 }
 
 .texto-cadastro-ong-img{
@@ -34,24 +34,24 @@
 .texto-cadastro-ong-img h2{
     margin-top: 1px;
     font-family: Koh Santepheap;
-    font-size: 30px;
-    margin-right: 60px;
+    font-size: 36px;
+    margin-right: 30px;
     margin-bottom: 2%;
 }
 
 .texto-cadastro-ong-img img{
-    height: 8px;
+    height: 12px;
     width: 98%;
 }
 .botao-voltar-cad{
     background-color: #84644D;
     color: #FFFFFF;
     /* margin-bottom: 10px; */
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     border: none;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 200px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
@@ -99,6 +99,8 @@ flex-direction: column;
     justify-content: center;
     align-items: center;
     font: inter;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 .termos-ong p{
@@ -163,7 +165,12 @@ flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: inter;
+    margin-top: 1%;
     /* border: solid; */
+}
+
+.descricao-ong label{
+    margin-bottom: 1%;
 }
 
 .descricao-ong label{
@@ -208,4 +215,8 @@ flex-direction: column;
     transform: scale(1.02);
     transition: 0.3s ease;
     background-color: #735b4b;
+}
+
+.user-icon{
+    height: 80%;
 }
